kubernetes/swapi-consumer-deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: mercedes-benz-swapi-consumer
  namespace: mercedes-benz
  labels:
    app: mercedes-benz-swapi-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mercedes-benz-swapi-consumer
  template:
    metadata:
      labels:
        app: mercedes-benz-swapi-consumer
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: mercedes-benz-swapi-consumer
          image: docker-registry.valen.net:5000/mercedes-benz-swapi-consumer:1.0.0
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 512Mi
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/liveness
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/readiness
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
          imagePullPolicy: Always
      #nodeSelector:
        #key: value
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
      # dnsPolicy: ClusterFirst
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
