kubernetes/swapi-consumer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mercedes-benz-swapi-consumer
  namespace: mercedes-benz
  annotations:
    prometheus.io/path: "/actuator/prometheus"
    prometheus.io/port: "8080"
    prometheus.io/scheme: "http"
    prometheus.io/scrape: "true"
  labels:
    app: mercedes-benz-swapi-consumer
spec:
  type: ClusterIP # TODO: change to ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: mercedes-benz-swapi-consumer
